--- a/app/main.html
+++ b/app/main.html
@@ -5,8 +5,8 @@
         <link href="styles/main.css" rel="stylesheet">
         <!-- endbuild -->
 
-        <!-- build:js scripts/popup.js -->
-        <script src="scripts/popup.js"></script>
+        <!-- build:js scripts/main.js -->
+        <script src="scripts/main.js"></script>
         <!-- endbuild -->
     </head>
     <body>
